@startuml

title __SOURCE's Class Diagram__\n

  namespace model.data {
    namespace source {
      abstract class model.data.source.Collector {
          + Collector()
          {abstract} + getDatumLinkListByTree()
          {abstract} + getEntityDescription()
          {abstract} + getEntityName()
          {abstract} + getQualifiers()
          {abstract} + getReferences()
          {abstract} + getSingleStatement()
          {abstract} + getStatementList()
          {abstract} + triggerLoad()
          {abstract} + triggerSave()
      }
    }
  }
  

  namespace model.data {
    namespace source {
      class model.data.source.LocalCollector {
          + LocalCollector()
          + triggerLoad()
          + triggerSave()
          # getJson()
      }
    }
  }
  

  namespace model.data {
    namespace source {
      class model.data.source.LocalRepository {
          - file : File
          + LocalRepository()
          + load()
          + save()
      }
    }
  }
  

  namespace model.data {
    namespace source {
      class model.data.source.WebCollector {
          {static} # loaded : Entities
          - gson : Gson
          {static} - seen : ArrayList<Entities>
          + WebCollector()
          + getDatumLinkListByTree()
          + getEntityDescription()
          + getEntityName()
          + getQualifiers()
          + getReferences()
          + getSingleStatement()
          + getStatementList()
          + triggerLoad()
          + triggerSave()
          # getJson()
          {static} - formatURL()
      }
    }
  }
  

  model.data.source.Collector o-- model.data.source.LocalRepository : repository
  model.data.source.LocalCollector -up-|> model.data.source.WebCollector
  model.data.source.WebCollector -up-|> model.data.source.Collector


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
